--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/node_modules/**
 
 # testing
 /coverage
@@ -10,6 +11,8 @@
 /build
 /dist
 /.next
+/.server
+/.server/**
 
 # misc
 .DS_Store
