--- a/package.json
+++ b/package.json
@@ -2,21 +2,32 @@
   "name": "create-next-example-app",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "shx --silent rm -rf ./.next && next build && npm run build:server",
+    "build:server": "shx --silent rm -rf ./.server && tsc --project './tsconfig.server.json' --outDir './.server'",
     "start": "next start"
   },
   "dependencies": {
     "@zeit/next-typescript": "^1.1.1",
+    "express": "^4.16.4",
     "next": "^8.0.4",
+    "next-i18next": "^0.37.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@types/express": "^4.16.1",
     "@types/jest": "^24.0.11",
     "@types/next": "^8.0.3",
     "@types/node": "^11.13.0",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
-    "@types/styled-jsx": "^2.2.8"
+    "@types/styled-jsx": "^2.2.8",
+    "prettier-tslint": "^0.4.2",
+    "shx": "^0.3.2",
+    "tslint": "^5.15.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.4.1"
   }
 }
