--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev:start": "wait-on ./.server/index.js && NODE_ENV=development nodemon --watch ./.server --inspect --verbose ./.server/index.js",
     "build": "npm run clean && next build && npm run build:server",
     "build:server": "tsc --project './tsconfig.server.json' --outDir './.server'",
-    "start": "NODE_ENV=production node ./.server/index.js"
+    "start": "NODE_ENV=production node ./.server/index.js",
+    "lint": "tslint --project tsconfig.json && tslint --project tsconfig.server.json",
+    "lint:fix": "tslint --fix --project tsconfig.json && tslint --fix --project tsconfig.server.json"
   },
   "dependencies": {
     "@zeit/next-typescript": "^1.1.1",
