--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@zeit/next-typescript": "^1.1.1",
     "express": "^4.16.4",
+    "moment": "^2.24.0",
     "next": "^8.0.4",
     "next-i18next": "^0.37.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
