--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@zeit/next-typescript": "^1.1.1",
+    "compression": "^1.7.4",
     "express": "^4.16.4",
+    "helmet": "^3.16.0",
     "moment": "^2.24.0",
     "next": "^8.0.4",
     "next-i18next": "^0.37.0",
@@ -22,13 +24,17 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/compression": "0.0.36",
     "@types/express": "^4.16.1",
+    "@types/helmet": "0.0.43",
     "@types/jest": "^24.0.11",
     "@types/next": "^8.0.3",
     "@types/node": "^11.13.0",
+    "@types/on-headers": "^1.0.0",
     "@types/react": "^16.8.11",
     "@types/react-dom": "^16.8.3",
     "@types/styled-jsx": "^2.2.8",
+    "@types/uuid": "^3.4.4",
     "concurrently": "^4.1.0",
     "prettier-tslint": "^0.4.2",
     "shx": "^0.3.2",
