--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "clean": "shx --silent rm -rf ./.server && shx --silent rm -rf ./.next",
     "dev": "npm run clean && concurrently \"npm run dev:server\" \"npm run dev:start\"",
     "dev:server": "tsc --project './tsconfig.server.json' --watch --preserveWatchOutput --outDir './.server'",
-    "dev:start": "wait-on ./.server/index.js && NODE_ENV=development nodemon --watch ./.server --inspect --verbose ./.server/index.js",
+    "dev:start": "wait-on ./.server/server/index.js && NODE_ENV=development nodemon --watch ./.server --inspect --verbose ./.server/server/index.js",
     "build": "npm run clean && next build && npm run build:server",
     "build:server": "tsc --project './tsconfig.server.json' --outDir './.server'",
-    "start": "NODE_ENV=production node ./.server/index.js",
+    "start": "NODE_ENV=production node ./.server/server/index.js",
     "lint": "tslint --project tsconfig.json && tsc && tslint --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --check **/*.ts",
     "lint:fix": "tslint --fix --project tsconfig.json && tsc && tslint --fix --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --write **/*.ts"
   },
