--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "typeRoots": [ "./types", "./node_modules/@types"]
   },
   "include": [
-    "components/**/*",
+    "shared/**/*",
     "pages/**/*",
     "types/**/*"
   ]
