Added snapshot component testing

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "tslint --project tsconfig.json && tsc && tslint --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --check **/*.ts",
     "lint:fix": "tslint --fix --project tsconfig.json && tsc && tslint --fix --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --write **/*.ts",
     "test": "jest",
+    "test:update": "jest --updateSnapshot",
     "start": "NODE_ENV=production node ./.server/server/index.js"
   },
   "dependencies": {
@@ -36,13 +37,18 @@
     "@types/on-headers": "^1.0.0",
     "@types/react": "^16.8.11",
     "@types/react-dom": "^16.8.3",
+    "@types/react-test-renderer": "^16.8.1",
     "@types/styled-jsx": "^2.2.8",
     "@types/uuid": "^3.4.4",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^24.7.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "concurrently": "^4.1.0",
     "jest": "^24.7.1",
     "prettier-tslint": "^0.4.2",
+    "react-test-renderer": "^16.8.6",
     "shx": "^0.3.2",
-    "ts-jest": "^24.0.1",
     "tslint": "^5.15.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
