--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@zeit/next-typescript": "^1.1.1",
+    "axios": "^0.18.0",
     "compression": "^1.7.4",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
