--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "tslint --project tsconfig.json && tsc && tslint --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --check **/*.ts",
     "lint:fix": "tslint --fix --project tsconfig.json && tsc && tslint --fix --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --write **/*.ts",
     "test": "jest",
-    "test:update": "jest --updateSnapshot",
+    "test:snapshot": "jest --updateSnapshot",
+    "test:api": "jest --config=jest.api.config.js",
     "start": "NODE_ENV=production node ./.server/server/index.js"
   },
   "dependencies": {
