--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:ui-browser": "testcafe $TEST_BROWSER ./__tests__/ui/**/*.ts",
     "test:ui-ci": "concurrently --kill-others --success first \"NODE_ENV=production npm start\" \"wait-on http://localhost:3000/health && npm run test:ui\"",
     "test:ci": "npm run lint && npm run build && npm run test && npm run test:api-ci && npm run test:ui-ci",
-    "test:ci-browser": "npm run lint && npm run build && npm run test && npm run test:api-ci && npm run test:ui-ci-custom",
+    "test:ci-browser": "npm run lint && npm run build && npm run test && npm run test:api-ci && npm run test:ui-ci-browser",
     "start": "node ./.server/server/index.js"
   },
   "dependencies": {
