--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,12 @@
     "sourceMap": true,
     "strict": true,
     "target": "esnext",
-    "typeRoots": [ "./types", "./node_modules/@types"]
+    "typeRoots": [ "./src/types", "./node_modules/@types"]
   },
+  "exclude": [
+    "src/server/**/*"
+  ],
   "include": [
-    "shared/**/*",
-    "pages/**/*",
-    "types/**/*"
+    "src/**/*"
   ]
 }
