--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "create-next-example-app",
   "scripts": {
     "clean": "shx --silent rm -rf ./dist",
-    "debug": "npm run clean && concurrently \"npm run dev:server\" \"npm run debug:start\"",
-    "debug:start": "wait-on ./.server/server/index.js && NODE_ENV=development nodemon --watch ./.server --inspect-brk --verbose ./.server/server/index.js",
+    "debug": "npm run clean && concurrently \"npm run dev:server\" \"NODE_INSPECT=--inspect-brk npm run dev:start\"",
     "dev": "npm run clean && concurrently \"npm run dev:server\" \"npm run dev:start\"",
-    "dev:server": "tsc --project './tsconfig.server.json' --watch --preserveWatchOutput --outDir './.server'",
-    "dev:start": "wait-on ./.server/server/index.js && NODE_ENV=development nodemon --watch ./.server --inspect --verbose ./.server/server/index.js",
+    "dev:server": "tsc --project './tsconfig.server.json' --watch --preserveWatchOutput --outDir './dist/server'",
+    "dev:start": "wait-on ./dist/server/server/index.js && NODE_ENV=development nodemon --watch ./dist/server ${NODE_INSPECT:=--inspect} --verbose ./dist/server/server/index.js",
     "build": "npm run clean && next build ./src && npm run build:server",
     "build:server": "tsc --project './tsconfig.server.json' --outDir './dist/server'",
     "lint": "tslint --project tsconfig.json && tsc && tslint --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --check **/*.ts",
@@ -15,12 +14,9 @@
     "test:snapshot": "jest --updateSnapshot",
     "test:api": "jest --config=jest.api.config.js",
     "test:api-ci": "concurrently --kill-others --success first \"NODE_ENV=production npm start\" \"wait-on http://localhost:3000/health && npm run test:api\"",
-    "test:ui": "TEST_BROWSER=chrome:headless npm run test:ui-browser",
-    "test:ui-browser": "testcafe $TEST_BROWSER ./__tests__/ui/**/*.ts",
+    "test:ui": "testcafe ${TEST_BROWSER:-chrome:headless} ./__tests__/ui/**/*.ts",
     "test:ui-ci": "concurrently --kill-others --success first \"NODE_ENV=production npm start\" \"wait-on http://localhost:3000/health && npm run test:ui\"",
-    "test:ui-browser-ci": "concurrently --kill-others --success first \"NODE_ENV=production npm start\" \"wait-on http://localhost:3000/health && npm run test:ui-browser\"",
-    "test:ci": "npm run lint && npm run build && npm run test && npm run test:api-ci && npm run test:ui-ci",
-    "test:ci-browser": "npm run lint && npm run build && npm run test && npm run test:api-ci && npm run test:ui-browser-ci",
+    "test:ci": "npm run lint && npm run build && npm run test && npm run test:api-ci && npm run test:ui-ci && echo Tests passed!",
     "start": "node server.js"
   },
   "dependencies": {
