--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "debug": "npm run clean && concurrently \"npm run dev:server\" \"NODE_INSPECT=--inspect-brk npm run dev:start\"",
     "dev": "npm run clean && concurrently \"npm run dev:server\" \"npm run dev:start\"",
     "dev:server": "tsc --project './tsconfig.server.json' --watch --preserveWatchOutput --outDir './dist/server'",
-    "dev:start": "wait-on ./dist/server/server/index.js && NODE_ENV=development nodemon --watch ./dist/server ${NODE_INSPECT:=--inspect} --verbose ./dist/server/server/index.js",
+    "dev:start": "wait-on ./dist/server/server/index.js && NODE_ENV=development nodemon --watch ./dist/server ${NODE_INSPECT:=--inspect} --verbose server.js",
     "build": "npm run clean && next build ./src && npm run build:server",
     "build:server": "tsc --project './tsconfig.server.json' --outDir './dist/server'",
     "lint": "tslint --project tsconfig.json && tsc && tslint --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --check **/*.ts",
