Synchronize source and dist in docker dev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,7 @@ services:
     environment:
       NODE_ENV: development
     volumes:
-      - ./logs:/usr/src/app/logs
-      - ./src/pages:/usr/src/app/src/pages
-      - ./src/server:/usr/src/app/src/server
-      - ./src/shared:/usr/src/app/src/shared
-      - ./src/static:/usr/src/app/src/static
-      - ./src/types:/usr/src/app/src/types
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
     ports:
       - 3000:3000
