--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "autoprefixer": "^9.5.0",
     "axios": "^0.18.0",
     "compression": "^1.7.4",
     "express": "^4.16.4",
@@ -28,6 +30,9 @@
     "moment": "^2.24.0",
     "next": "^8.0.4",
     "next-i18next": "^0.37.0",
+    "node-sass": "^4.11.0",
+    "pixrem": "^5.0.0",
+    "postcss-rtl": "^1.3.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "winston": "^3.2.1"
