--- a/package.json
+++ b/package.json
@@ -31,11 +31,17 @@
     "moment": "^2.24.0",
     "next": "^8.0.4",
     "next-i18next": "^0.37.0",
+    "next-redux-wrapper": "^3.0.0-alpha.2",
     "node-sass": "^4.11.0",
     "pixrem": "^5.0.0",
     "postcss-rtl": "^1.3.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -44,11 +50,14 @@
     "@types/helmet": "0.0.43",
     "@types/jest": "^24.0.11",
     "@types/next": "^8.0.3",
+    "@types/next-redux-wrapper": "^2.0.2",
     "@types/node": "^11.13.0",
     "@types/on-headers": "^1.0.0",
     "@types/react": "^16.8.11",
     "@types/react-dom": "^16.8.3",
     "@types/react-test-renderer": "^16.8.1",
+    "@types/redux-logger": "^3.0.7",
+    "@types/redux-promise": "^0.5.28",
     "@types/styled-jsx": "^2.2.8",
     "@types/uuid": "^3.4.4",
     "babel-core": "^6.26.3",
