--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "moment": "^2.24.0",
     "next": "^8.0.4",
     "next-i18next": "^0.37.0",
-    "next-redux-wrapper": "^3.0.0-alpha.2",
     "node-sass": "^4.11.0",
     "pixrem": "^5.0.0",
     "postcss-rtl": "^1.3.3",
@@ -50,11 +49,11 @@
     "@types/helmet": "0.0.43",
     "@types/jest": "^24.0.11",
     "@types/next": "^8.0.3",
-    "@types/next-redux-wrapper": "^2.0.2",
     "@types/node": "^11.13.0",
     "@types/on-headers": "^1.0.0",
     "@types/react": "^16.8.11",
     "@types/react-dom": "^16.8.3",
+    "@types/react-redux": "^7.0.6",
     "@types/react-test-renderer": "^16.8.1",
     "@types/redux-logger": "^3.0.7",
     "@types/redux-promise": "^0.5.28",
