--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "sourceMap": true,
     "strict": true,
     "target": "esnext",
-    "typeRoots": [ "./src/types", "./node_modules/@types"]
+    "typeRoots": [ "./types", "./node_modules/@types"]
   },
   "exclude": [
     "src/server/**/*"
