--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,11 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "target": "esnext",
-    "typeRoots": [ "./types", "./node_modules/@types"]
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
-  "exclude": [
-    "src/server/**/*"
-  ],
-  "include": [
-    "src/**/*"
-  ]
+  "exclude": ["src/server/**/*"],
+  "include": ["src/**/*"]
 }
