--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,17 +4,17 @@
   "synchronize": true,
   "logging": false,
   "entities": [
-     "dist/server/server/entities/**/*.js"
+     "dist/server/entities/**/*.js"
   ],
   "migrations": [
-     "dist/server/server/migrations/**/*.js"
+     "dist/server/migrations/**/*.js"
   ],
   "subscribers": [
-     "dist/server/server/subscribers/**/*.js"
+     "dist/server/subscribers/**/*.js"
   ],
   "cli": {
-     "entitiesDir": "dist/server/server/entities",
-     "migrationsDir": "dist/server/server/migrations",
-     "subscribersDir": "dist/server/server/subscribers"
+     "entitiesDir": "dist/server/entities",
+     "migrationsDir": "dist/server/migrations",
+     "subscribersDir": "dist/server/subscribers"
   }
 }
