--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "clean": "shx --silent rm -rf ./dist",
     "debug": "npm run clean && concurrently \"npm run dev:server\" \"NODE_INSPECT=--inspect-brk npm run dev:start\"",
     "dev": "npm run clean && concurrently \"npm run dev:server\" \"npm run dev:start\"",
-    "dev:server": "tsc --project './tsconfig.server.json' --watch --preserveWatchOutput --outDir './dist/server'",
-    "dev:start": "wait-on ./dist/server/server/index.js && NODE_ENV=development nodemon --watch ./dist/server ${NODE_INSPECT:=--inspect} --verbose server.js",
+    "dev:server": "tsc --project './tsconfig.server.json' --watch --preserveWatchOutput --outDir './dist'",
+    "dev:start": "wait-on ./dist/server/index.js && NODE_ENV=${NODE_ENV:-development} nodemon --watch ./dist/server ${NODE_INSPECT:=--inspect} --verbose server.js",
     "build": "npm run clean && BUNDLE_ANALYZE=both next build ./src && npm run build:server",
-    "build:server": "tsc --project './tsconfig.server.json' --outDir './dist/server'",
+    "build:server": "tsc --project './tsconfig.server.json' --outDir './dist'",
     "lint": "tslint --project tsconfig.json && tsc && tslint --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --check **/*.ts",
     "lint:fix": "tslint --fix --project tsconfig.json && tsc && tslint --fix --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --write **/*.ts",
     "test": "jest",
@@ -28,6 +28,7 @@
     "axios": "^0.18.0",
     "compression": "^1.7.4",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "helmet": "^3.16.0",
     "moment": "^2.24.0",
     "next": "^8.0.4",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@types/compression": "0.0.36",
     "@types/express": "^4.16.1",
+    "@types/faker": "^4.1.5",
     "@types/helmet": "0.0.43",
     "@types/jest": "^24.0.11",
     "@types/next": "^8.0.3",
