--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-test-renderer": "^16.8.6",
     "shx": "^0.3.2",
     "testcafe": "^1.1.1",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.15.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
