Added events page and fixed vscode ssr debugging

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,10 @@
             "request": "attach",
             "name": "Local: Attach to Node",
             "port": 9229,
-            "restart": true
+            "restart": true,
+            "sourceMapPathOverrides": {
+                "webpack:///*": "${workspaceRoot}/src/*"
+            }
         },
         {
             "type": "node",
