--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.4.0",
     "@types/compression": "0.0.36",
     "@types/express": "^4.16.1",
     "@types/faker": "^4.1.5",
