--- a/package.json
+++ b/package.json
@@ -24,21 +24,21 @@
     "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
-    "autoprefixer": "^9.5.0",
+    "autoprefixer": "^9.5.1",
     "axios": "^0.18.0",
     "compression": "^1.7.4",
     "express": "^4.16.4",
     "faker": "^4.1.0",
-    "helmet": "^3.16.0",
+    "helmet": "^3.17.0",
     "moment": "^2.24.0",
-    "next": "^8.0.4",
-    "next-i18next": "^0.37.0",
-    "node-sass": "^4.11.0",
+    "next": "^8.1.0",
+    "next-i18next": "^0.39.0",
+    "node-sass": "^4.12.0",
     "pixrem": "^5.0.0",
     "postcss-rtl": "^1.3.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^6.0.1",
+    "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
@@ -46,22 +46,22 @@
     "redux-thunk": "^2.3.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^4.0.6",
-    "typeorm": "^0.2.16",
+    "typeorm": "^0.2.17",
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@types/compression": "0.0.36",
     "@types/express": "^4.16.1",
     "@types/faker": "^4.1.5",
     "@types/helmet": "0.0.43",
-    "@types/jest": "^24.0.11",
-    "@types/next": "^8.0.3",
-    "@types/node": "^11.13.0",
+    "@types/jest": "^24.0.12",
+    "@types/next": "^8.0.5",
+    "@types/node": "^12.0.0",
     "@types/on-headers": "^1.0.0",
-    "@types/react": "^16.8.11",
-    "@types/react-dom": "^16.8.3",
-    "@types/react-redux": "^7.0.6",
+    "@types/react": "^16.8.16",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.0.8",
     "@types/react-test-renderer": "^16.8.1",
     "@types/redux-logger": "^3.0.7",
     "@types/redux-promise": "^0.5.28",
@@ -73,17 +73,17 @@
     "babel-preset-react": "^6.24.1",
     "concurrently": "^4.1.0",
     "jest": "^24.7.1",
-    "prettier": "1.16.4",
+    "prettier": "^1.17.0",
     "prettier-tslint": "^0.4.2",
     "react-test-renderer": "^16.8.6",
     "shx": "^0.3.2",
-    "testcafe": "^1.1.1",
+    "testcafe": "^1.1.3",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.15.0",
+    "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.4.1",
+    "typescript": "^3.4.5",
     "wait-on": "^3.2.0"
   }
 }
