--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "apollo-server-express": "^2.4.8",
     "autoprefixer": "^9.5.1",
     "axios": "^0.18.0",
     "compression": "^1.7.4",
+    "dataloader": "^1.4.0",
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "graphql": "^14.2.1",
     "helmet": "^3.17.0",
     "moment": "^2.24.0",
     "next": "^8.1.0",
@@ -46,6 +49,7 @@
     "redux-thunk": "^2.3.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^4.0.6",
+    "type-graphql": "^0.17.3",
     "typeorm": "^0.2.17",
     "winston": "^3.2.1"
   },
@@ -54,6 +58,7 @@
     "@types/compression": "0.0.36",
     "@types/express": "^4.16.1",
     "@types/faker": "^4.1.5",
+    "@types/graphql": "^14.2.0",
     "@types/helmet": "0.0.43",
     "@types/jest": "^24.0.12",
     "@types/next": "^8.0.5",
