--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "target": "esnext",
-    "typeRoots": ["./types", "./node_modules/@types"]
+    "typeRoots": ["src/types", "./node_modules/@types"]
   },
   "exclude": ["src/server/**/*"],
   "include": ["src/**/*"]
