--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: "node_js"
 node_js:
-  - "10.14.2"
+  - "lts/dubnium"
 addons:
  chrome: "stable"
 install:
-  - "npm install"
+  - "npm ci"
 script:
   - "npm run test:ci"
