--- a/package.json
+++ b/package.json
@@ -20,75 +20,76 @@
     "test:ci": "npm run lint && npm run build && npm run test && npm run test:apiui-ci && echo Tests passed!",
     "start": "node server.js"
   },
+  "browserslist": ["last 2 versions"],
   "dependencies": {
     "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
-    "apollo-server-express": "^2.4.8",
-    "autoprefixer": "^9.5.1",
-    "axios": "^0.18.0",
+    "apollo-server-express": "^2.9.3",
+    "autoprefixer": "^9.6.1",
+    "axios": "^0.19.0",
     "compression": "^1.7.4",
     "dataloader": "^1.4.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "faker": "^4.1.0",
-    "graphql": "^14.2.1",
-    "helmet": "^3.17.0",
+    "graphql": "^14.5.4",
+    "helmet": "^3.21.0",
     "moment": "^2.24.0",
     "next": "^8.1.0",
     "next-i18next": "^0.37.0",
     "node-sass": "^4.12.0",
     "pixrem": "^5.0.0",
-    "postcss-rtl": "^1.3.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
-    "redux": "^4.0.1",
+    "postcss-rtl": "^1.5.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^5.10.0",
+    "redux-persist": "^6.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "reflect-metadata": "^0.1.13",
-    "sqlite3": "^4.0.6",
-    "type-graphql": "^0.17.3",
-    "typeorm": "^0.2.17",
+    "sqlite3": "^4.1.0",
+    "type-graphql": "^0.17.5",
+    "typeorm": "^0.2.18",
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@types/compression": "0.0.36",
-    "@types/express": "^4.16.1",
+    "@babel/plugin-proposal-decorators": "^7.6.0",
+    "@types/compression": "^1.0.1",
+    "@types/express": "^4.17.1",
     "@types/faker": "^4.1.5",
-    "@types/graphql": "^14.2.0",
-    "@types/helmet": "0.0.43",
-    "@types/jest": "^24.0.12",
-    "@types/next": "^8.0.5",
-    "@types/node": "^12.0.0",
+    "@types/graphql": "^14.5.0",
+    "@types/helmet": "0.0.44",
+    "@types/jest": "^24.0.18",
+    "@types/next": "^8.0.6",
+    "@types/node": "^12.7.5",
     "@types/on-headers": "^1.0.0",
-    "@types/react": "^16.8.16",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.0.8",
-    "@types/react-test-renderer": "^16.8.1",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.2",
+    "@types/react-test-renderer": "^16.9.0",
     "@types/redux-logger": "^3.0.7",
     "@types/redux-promise": "^0.5.28",
     "@types/styled-jsx": "^2.2.8",
-    "@types/uuid": "^3.4.4",
+    "@types/uuid": "^3.4.5",
     "babel-core": "^6.26.3",
-    "babel-jest": "^24.7.1",
+    "babel-jest": "^24.9.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "concurrently": "^4.1.0",
-    "jest": "^24.7.1",
-    "prettier": "^1.17.0",
+    "concurrently": "^4.1.2",
+    "jest": "^24.9.0",
+    "prettier": "^1.18.2",
     "prettier-tslint": "^0.4.2",
-    "react-test-renderer": "^16.8.6",
+    "react-test-renderer": "^16.9.0",
     "shx": "^0.3.2",
-    "testcafe": "^1.1.3",
+    "testcafe": "^1.4.3",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.16.0",
+    "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.4.5",
-    "wait-on": "^3.2.0"
+    "typescript": "^3.6.3",
+    "wait-on": "^3.3.0"
   }
 }
