Updated dependencies and Next to v9

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev:start": "wait-on ./dist/server/index.js && NODE_ENV=${NODE_ENV:-development} nodemon --watch ./dist/server ${NODE_INSPECT:=--inspect} --verbose server.js",
     "build": "npm run clean && BUNDLE_ANALYZE=both next build ./src/client && npm run build:server",
     "build:server": "tsc --project './tsconfig.server.json' --outDir './dist'",
-    "lint": "tslint --project tsconfig.json && tsc && tslint --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --check **/*.ts",
-    "lint:fix": "tslint --fix --project tsconfig.json && tsc && tslint --fix --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --write **/*.ts",
+    "lint": "tslint --project tsconfig.json && tsc && tslint --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --check \"**/*.ts\"",
+    "lint:fix": "tslint --fix --project tsconfig.json && tsc && tslint --fix --project tsconfig.server.json && tsc --project tsconfig.server.json --noEmit && prettier --write \"**/*.ts\"",
     "test": "jest",
     "test:snapshot": "jest --updateSnapshot",
     "test:api": "jest --config=jest.api.config.js",
@@ -20,11 +20,12 @@
     "test:ci": "npm run lint && npm run build && npm run test && npm run test:apiui-ci && echo Tests passed!",
     "start": "node server.js"
   },
-  "browserslist": ["last 2 versions"],
+  "browserslist": [
+    "last 2 versions"
+  ],
   "dependencies": {
     "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-sass": "^1.0.1",
-    "@zeit/next-typescript": "^1.1.1",
     "apollo-server-express": "^2.9.3",
     "autoprefixer": "^9.6.1",
     "axios": "^0.19.0",
@@ -35,8 +36,8 @@
     "graphql": "^14.5.4",
     "helmet": "^3.21.0",
     "moment": "^2.24.0",
-    "next": "^8.1.0",
-    "next-i18next": "^0.37.0",
+    "next": "^9.0.5",
+    "next-i18next": "^1.2.0",
     "node-sass": "^4.12.0",
     "pixrem": "^5.0.0",
     "postcss-rtl": "^1.5.0",
@@ -62,7 +63,6 @@
     "@types/graphql": "^14.5.0",
     "@types/helmet": "0.0.44",
     "@types/jest": "^24.0.18",
-    "@types/next": "^8.0.6",
     "@types/node": "^12.7.5",
     "@types/on-headers": "^1.0.0",
     "@types/react": "^16.9.2",
