--- a/package.json
+++ b/package.json
@@ -26,23 +26,24 @@
   "dependencies": {
     "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-sass": "^1.0.1",
-    "apollo-server-express": "^2.9.3",
-    "autoprefixer": "^9.6.1",
+    "apollo-server-express": "^2.9.7",
+    "autoprefixer": "^9.7.1",
     "axios": "^0.19.0",
     "compression": "^1.7.4",
     "dataloader": "^1.4.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "graphql": "^14.5.4",
-    "helmet": "^3.21.0",
+    "graphql": "^14.5.8",
+    "helmet": "^3.21.2",
     "moment": "^2.24.0",
-    "next": "^9.0.5",
-    "next-i18next": "^1.2.0",
-    "node-sass": "^4.12.0",
+    "next": "^9.1.2",
+    "next-i18next": "^1.2.1",
+    "node-sass": "^4.13.0",
     "pixrem": "^5.0.0",
     "postcss-rtl": "^1.5.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-helmet": "^5.2.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
@@ -52,27 +53,27 @@
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^4.1.0",
     "type-graphql": "^0.17.5",
-    "typeorm": "^0.2.18",
+    "typeorm": "^0.2.20",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.6.0",
     "@types/compression": "^1.0.1",
-    "@types/express": "^4.17.1",
-    "@types/faker": "^4.1.5",
+    "@types/express": "^4.17.2",
+    "@types/faker": "^4.1.7",
     "@types/graphql": "^14.5.0",
     "@types/helmet": "0.0.44",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.5",
+    "@types/jest": "^24.0.21",
+    "@types/node": "^12.12.5",
     "@types/on-headers": "^1.0.0",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-redux": "^7.1.2",
-    "@types/react-test-renderer": "^16.9.0",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-test-renderer": "^16.9.1",
     "@types/redux-logger": "^3.0.7",
     "@types/redux-promise": "^0.5.28",
     "@types/styled-jsx": "^2.2.8",
-    "@types/uuid": "^3.4.5",
+    "@types/uuid": "^3.4.6",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.9.0",
     "babel-preset-env": "^1.7.0",
@@ -81,15 +82,15 @@
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "prettier-tslint": "^0.4.2",
-    "react-test-renderer": "^16.9.0",
+    "react-test-renderer": "^16.11.0",
     "shx": "^0.3.2",
-    "testcafe": "^1.4.3",
-    "ts-jest": "^24.0.2",
+    "testcafe": "^1.6.0",
+    "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^4.0.0",
-    "typescript": "^3.6.3",
+    "tslint-react": "^4.1.0",
+    "typescript": "^3.6.4",
     "wait-on": "^3.3.0"
   }
 }
